# mkrpm

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
docs/: TAG-CODEX.txt
src/: Makefile.am  metadata.c  metadata.h  mkrpm.c  output.c  output.h  payload_cpio.c  payload_cpio.h  rpmtypes.h  tagdb.c  tagdb.h
tests/: Makefile.am  test-metadata.c  test-output.c  test-tagdb.c
utils/: Makefile.am  hexconvert.sh  rpmdump.c
